fixed issues viewed on firefox

--- a/less/index.less
+++ b/less/index.less
@@ -174,8 +174,8 @@ section{
 }
 
 #intro {
-	min-height: fit-content;
-	height: 100vh;
+	min-height: 100vh;
+	// height: 100vh;
 	.set-flex(column,space-evenly,center);
 	
 	h1{
@@ -212,7 +212,7 @@ section{
 		transition-duration: 1s;
 		transition-property: all;
 		div{
-			min-height: fit-content;
+			min-height: auto;
 			&,h2{
 				margin: 0;
 			}
